# duckdb-vaporetto

./: .gitignore  AGENTS.md  Cargo.toml  MODEL_LICENSES.md  Makefile  README.md  build.rs
.github/workflows/: release.yml
docs/releases/: HEAD.md  v0.2.0.md  v0.3.0.md
scripts/: build-wasm.sh  fetch-duckdb-unix.sh  fetch-vaporetto-model.ps1  fetch-vaporetto-model.sh  package-release.sh  release-notes.sh
src/: lib.rs  tokenizer.rs
tests/: default_model.ps1  default_model.sh  default_model.sql  scalar.ps1  scalar.sh  scalar.sql
